--- a/AdminWeb/Areas/Admin/Views/Payment/Index.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Payment/Index.cshtml
@@ -154,5 +154,28 @@
                 </tbody>
             </table>
         </div>
+        @if (ViewBag.TotalPages > 1)
+        {
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+
+                    <li class="page-item @(ViewBag.PageNow == 1 ? "disabled" : "")">
+                        <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.PageNow - 1, pageSize = ViewBag.PageSize, paymentId = ViewBag.PaymentId, status = ViewBag.Status })">«</a>
+                    </li>
+
+                    @for (int i = 1; i <= (int)ViewBag.TotalPages; i++)
+                    {
+                        <li class="page-item @(i == ViewBag.PageNow ? "active" : "")">
+                            <a class="page-link" href="@Url.Action("Index", new { page = i, pageSize = ViewBag.PageSize, paymentId = ViewBag.PaymentId, status = ViewBag.Status })">@i</a>
+                        </li>
+                    }
+
+                    <li class="page-item @(ViewBag.PageNow == ViewBag.TotalPages ? "disabled" : "")">
+                        <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.PageNow + 1, pageSize = ViewBag.PageSize, paymentId = ViewBag.PaymentId, status = ViewBag.Status })">»</a>
+                    </li>
+                </ul>
+            </nav>
+        }
+
     </div>
 </div>
