--- a/AdminWeb/Areas/Admin/Views/Shared/_FooterPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_FooterPartial.cshtml
@@ -1,11 +1,11 @@
-﻿
+
     <!--Start footer-->
     <div class="footer">
         <div class="pull-right">
-            10GB of <strong>250GB</strong> Free.
+            10GB of <strong>250GB</strong> Miễn phí.
         </div>
         <div>
-            <strong>Copyright</strong> Example Company &copy; 2014-2017
+            <strong>Xin chào tất cả mọi người!</strong> Đây là trang admin của nhóm 1 *
         </div>
     </div>
     <!--Start footer-->
