--- a/AdminWeb/Areas/Admin/Views/Shared/_HeaderPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_HeaderPartial.cshtml
@@ -1,24 +1,20 @@
-﻿
+
     <!--Start header-->
     <div class="row border-bottom">
         <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-                <form role="search" class="navbar-form-custom" action="search_results.html">
-                    <div class="form-group">
-                        <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                    </div>
-                </form>
+               
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li>
-                    <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
+                    <span class="m-r-sm text-muted welcome-message">Chào mừng mọi người.</span>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                         <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
                     </a>
-                    <ul class="dropdown-menu dropdown-messages">
+                    @* <ul class="dropdown-menu dropdown-messages">
                         <li>
                             <div class="dropdown-messages-box">
                                 <a href="profile.html" class="pull-left">
@@ -65,13 +61,13 @@
                                 </a>
                             </div>
                         </li>
-                    </ul>
+                    </ul> *@
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
                     </a>
-                    <ul class="dropdown-menu dropdown-alerts">
+                    @* <ul class="dropdown-menu dropdown-alerts">
                         <li>
                             <a href="mailbox.html">
                                 <div>
@@ -107,11 +103,11 @@
                                 </a>
                             </div>
                         </li>
-                    </ul>
+                    </ul> *@
                 </li>
 
 
-            <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Logout</a></li>
+            <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Đăng xuất</a></li>
             </ul>
 
         </nav>
