--- a/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -12,7 +12,7 @@
                             <span class="block m-t-xs">
                                 @if (User.Identity.IsAuthenticated)
                                 {
-                                    <strong class="font-bold">Hello, @User.Identity.Name</strong>
+                                    <strong class="font-bold">Xin chào, @User.Identity.Name</strong>
                                 }
 
                                 <span class="text-muted text-xs block">
@@ -24,13 +24,11 @@
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-controller="Profile" asp-action="Index">
-                                <i class="bi bi-person-circle"></i> Profile
+                                <i class="bi bi-person-circle"></i> Hồ sơ
                             </a>
                         </li>
-                        <li><a href="contacts.html">Contacts</a></li>
-                        <li><a href="mailbox.html">Mailbox</a></li>
-                        <li class="divider"></li>
-                        <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Logout</a></li>
+                  
+                        <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Đăng xuất</a></li>
                     </ul>
                 </div>
                 <div class="logo-element">
@@ -40,10 +38,10 @@
             <!--Start Sidebar-->
         
              <li>
-                <a asp-action="Index" asp-controller="Dashboard"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span></a>
+                <a asp-action="Index" asp-controller="Dashboard"><i class="fa fa-th-large"></i> <span class="nav-label">Trang chủ</span></a>
             </li>
             <li>
-                <a asp-action="Index" asp-controller="Category"><i class="fa fa-diamond"></i> <span class="nav-label">Categories</span></a>
+                <a asp-action="Index" asp-controller="Category"><i class="fa fa-diamond"></i> <span class="nav-label">Danh mục</span></a>
             </li>
           @*   <li>
                 <a asp-action="Index" asp-controller="Brand"><i class="fa fa-sitemap"></i> <span class="nav-label">Brands</span></a>
@@ -51,27 +49,28 @@
             <li class="has-submenu">
                 <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Products</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
-                    <li><a asp-action="Index" asp-controller="Product">List products</a></li>
-                    <li><a asp-action="Create" asp-controller="Product">Create a product</a></li>
+                    <li><a asp-action="Index" asp-controller="Product">Danh sách sản phẩm</a></li>
+                    <li><a asp-action="Create" asp-controller="Product">Tạo sản phẩm</a></li>
                 </ul>
             </li>
          <li>
-                <a asp-action="Index" asp-controller="Order"><i class="fa fa-shopping-cart"></i></i> <span class="nav-label">Order</span></a>
+                <a asp-action="Index" asp-controller="Order"><i class="fa fa-shopping-cart"></i> <span class="nav-label">Đơn hàng</span></a>
             </li>
 
 			<li>
-                <a asp-action="Index" asp-controller="User"><i class="fa fa-database"></i></i> <span class="nav-label">User</span></a>
+                <a asp-action="Index" asp-controller="User"><i class="fa fa-database"></i> <span class="nav-label">Tài khoản</span></a>
 			</li>
 
 			<li>
-                <a asp-action="Index" asp-controller="Payment"><i class="fa fa-magic"></i></i> <span class="nav-label">Payment</span></a>
+                <a asp-action="Index" asp-controller="Payment"><i class="fa fa-magic"></i> <span class="nav-label">Thanh toán</span></a>
 			</li>
             <li>
-                <a asp-action="Index" asp-controller="Review"><i class="fa fa-laptop"></i></i> <span class="nav-label">Review</span></a>
+                <a asp-action="Index" asp-controller="Review"><i class="fa fa-laptop"></i> <span class="nav-label">Đánh giá</span></a>
             </li>
             <li>
-                <a asp-action="Index" asp-controller="Shipping"><i class="fa fa-files-o"></i></i> <span class="nav-label">Shipping</span></a>
+                <a asp-action="Index" asp-controller="Shipping"><i class="fa fa-files-o"></i> <span class="nav-label">Giao hàng</span></a>
             </li>
+     
 
             <!--End Sidebar-->
         </ul>
