--- a/AdminWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -4,9 +4,18 @@
 @{
     ViewData["Title"] = "Quản lý đơn hàng";
 }
+<div class="clearfix mb-3" style="display: table; width: 100%;">
+    <div style="display: table-cell; vertical-align: middle;">
+        <h2 class="m-0" style="margin: 0;">Quản lý đơn hàng</h2>
+    </div>
+    <div style="display: table-cell; vertical-align: middle; text-align: right;">
+        <button type="button" class="btn btn-default btn-sm" title="Làm mới" onclick="location.reload();">
+            <i class="fa fa-refresh"></i>
+        </button>
+    </div>
+</div>
 
-<h2 class="mb-3">Quản lý đơn hàng</h2>
-
+<br/>
 <!-- 🔍 Form tìm kiếm -->
 <form asp-action="Search" method="post" class="mb-3">
     <div class="row">
